tests/encaps/encaps.exp
Error ----------------------------------------------------------- encaps.js:3:16

Error: encaps.js:3
  3: var s1 = `l${a.x}r`; // error: no prop x in A
                    ^ Cannot get `a.x` because property `x` is missing in `A` [1].
  References:
    2: var a = new A();
               ^^^^^^^ [1]: `A`

Error ----------------------------------------------------------- encaps.js:6:20

Error: encaps.js:6
  6:     var x:number = strings[0]; // error: string ~> number
                        ^^^^^^^^^^ Cannot assign `strings[0]` to `x` because string [1] is incompatible with number [2].
  References:
    9: var s2 = tag `l${42}r`;
                ^^^^^^^^^^^^^ [1]: string
    6:     var x:number = strings[0]; // error: string ~> number
                 ^^^^^^ [2]: number

Error ----------------------------------------------------------- encaps.js:16:2

Error: encaps.js:16
 16: (s3.foo: number); // error: string ~> number
      ^^^^^^ Cannot cast `s3.foo` to number because string [1] is incompatible with number [2].
  References:
   12:   return { foo: "" }; // ok: tagged templates can return whatever
                       ^^ [1]: string
   16: (s3.foo: number); // error: string ~> number
                ^^^^^^ [2]: number


Found 3 errors
